KubernatesDocuments/PROJE/AllInOnePod.yml
apiVersion: v1
kind: Pod
metadata:
  name: allinonepod
  labels:
    app: allinone
spec:
  containers:
  - name: mongoimage
    image: mongo
    ports:
    - containerPort: 27017
  - name: postgresql
    image: postgres
    ports:
    - containerPort: 5432
  - name: rabbitmq
    image: rabbitmq:3-management
    ports:
      - containerPort: 5672
      - containerPort: 15672
  - name: zipkin
    image: openzipkin/zipkin
    ports:
      - containerPort: 9411
  - name: redis
    image: redis
    ports:
      - containerPort: 6379
  - name: elastic
    image: elasticsearch:7.17.0
    ports:
      - containerPort: 9200
      - containerPort: 9300
