KubernatesDocuments/PROJE/AuthServiceDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentauthservice
spec:
  selector:
    matchLabels:
      app: deploymentauthservice
  template:
    metadata:
      labels:
        app: deploymentauthservice
    spec:
      containers:
        - name: authservice
          image: muhammedali55/bilgeauthservice:v01
          ports:
            - containerPort: 8091
