KubernatesDocuments/PROJE/MongoDeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentmongo
spec:
  selector:
    matchLabels:
      app: deploymentmongodb
  template:
    metadata:
      labels:
        app: deploymentmongodb
    spec:
      containers:
      - name: mongoimage
        image: mongo
        resources:
          limits:
            memory: "1024Mi"
            cpu: "200m"
        ports:
        - containerPort: 27017
