KubernatesDocuments/PROJE/PostServiceDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentpostdervice
spec:
  selector:
    matchLabels:
      app: deploymentpostdervice
  template:
    metadata:
      labels:
        app: deploymentpostdervice
    spec:
      containers:
        - name: postdervice
          image: muhammedali55/bilgepostservice:v01
          ports:
            - containerPort: 8092
