KubernatesDocuments/PROJE/UserServiceDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentuserdervice
spec:
  selector:
    matchLabels:
      app: deploymentuserdervice
  template:
    metadata:
      labels:
        app: deploymentuserdervice
    spec:
      containers:
        - name: userdervice
          image: muhammedali55/bilgeuserservice:v01
          ports:
            - containerPort: 8092
