KubernatesDocuments/PROJE/ConfigServerClusterIp.yml
kind: Service
apiVersion: v1
metadata:
  name:  configservercluster
spec:
  selector:
    app:  deploymentconfigserver
  type: ClusterIP
  ports:
  - name:  authservice
    port:  8888
    targetPort:  8888
