KubernatesDocuments/PROJE/ExportIpEndPoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: exportiploadbalancer
subsets:
  - addresses:
      - ip: 10.88.8.81
    ports:
      - name: rabbit
        port: 30333
        protocol: TCP
      - name: zipkin  
        port: 32222
        protocol: TCP
