KubernatesDocuments/PROJE/MongoClusterIP.yml
kind: Service
apiVersion: v1
metadata:
  name:  clusteripmongo
  labels:
    clusterips: tools
spec:
  selector:
    app:  deploymentmongodb
  type:  ClusterIP
  ports:
  - name:  mongotcp
    port:  27017
    targetPort:  27017
