KubernatesDocuments/PROJE/RabbitMQClusterIP.yml
kind: Service
apiVersion: v1
metadata:
  name:  clusteriprabbitmq
  labels:
    clusterips: tools
spec:
  selector:
    app:  deploymentrabbitmq
  type:  ClusterIP
  ports:
  - name:  rabbitconnectiontcp
    port:  5672
    targetPort:  5672
  - name: rabbitmanagementtcp
    port: 15672
    targetPort: 15672
