KubernatesDocuments/PROJE/ZipkinClusterIP.yml
kind: Service
apiVersion: v1
metadata:
  name:  clusteripzipkin
  labels:
    clusterips: tools
spec:
  selector:
    app:  deploymentzipkin
  type:  ClusterIP
  ports:
  - name:  zipkintcp
    port:  9411
    targetPort:  9411
